--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,11 +2,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1>Trade Fiat Currency for Bitcoin</h1>
-                <h3>Decentralized, Secure, Peer to Peer</h3>
+                <h1>Bytabit Mobile App</h1>
+                <h3>Buy/Sell Bitcoin for Krona using Swish</h3>
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
-                <img src="{{ "/assets/img/ft-screenshot.png" | prepend: site.baseurl }}" class="img-responsive">
+                <img src="{{ "/assets/img/android-screenshot.png" | prepend: site.baseurl }}" class="img-responsive">
             </div>
         </div><!-- /row -->
     </div> <!-- /container -->
