--- a/sv/assets/css/main.css
+++ b/sv/assets/css/main.css
@@ -103,7 +103,7 @@ a:focus {
 }
 
 .navbar-brand {
-	font-family: 'Baskerville', sans-serif;
+	font-family: 'Arial', sans-serif;
 	font-weight: 700;
 	font-size: 18pt;
 }
